--- a/country/bettingRW/payment/paid.html
+++ b/country/bettingRW/payment/paid.html
@@ -201,7 +201,7 @@ Account will be given the unique user id for login<br/></p>
 
                 <tr>
                     <td align="center" style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 16px; vertical-align: top;">
-                        <p class="text-white" style="color: white; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; margin: 0;">Copyright © aviator predictor. 2024. All rights reserved.</p>
+                        <p class="text-white" style="color: white; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; margin: 0;">Contact Us on whatsap +250795022114</p>
                         <p class="text-primary" style="color: #F16522; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; margin: 0;">
                         </p>
                     </td>
